# mistral-fine-tuning

./: .env  .env.example  .gitignore  README.md  pyproject.toml
data/interim/: jokes_fine_tuning.jsonl  jokes_high_quality.jsonl  jokes_quality.jsonl  quality_jokes_fine_tuning.jsonl  quality_jokes_to_be_cleaned.json  quality_jokes_to_be_cleaned.jsonl
data/interim/jokes/: routine_100_repertoire.jsonl  routine_101_repertoire.jsonl  routine_103_repertoire.jsonl  routine_104_repertoire.jsonl  routine_105_repertoire.jsonl  routine_107_repertoire.jsonl  routine_108_repertoire.jsonl  routine_109_repertoire.jsonl  routine_111_repertoire.jsonl  routine_112_repertoire.jsonl  routine_113_repertoire.jsonl  routine_114_repertoire.jsonl  routine_115_repertoire.jsonl  (+117 more)
data/processed/: formatted_df_eval.jsonl  formatted_df_train.jsonl  jokes.jsonl  jokes_eval.jsonl  jokes_eval_b.jsonl  quality_jokes_eval.jsonl  quality_jokes_train.jsonl  reformatted_jokes_eval.jsonl  reformatted_jokes_eval_b.jsonl  reformatted_quality_jokes_eval.jsonl  reformatted_quality_jokes_train.jsonl
data/raw/: README.md  transcripts.json
notebooks/: 00_download_and_process_data.ipynb  01_extract_jokes_from_transcripts.ipynb  02_refine_jokes_dataset.ipynb  03_fine_tuning.ipynb  03_prepare_dataset.ipynb  03b_fine_tuning.ipynb  03c_fine_tuning_quality_dataset.ipynb  04_building_baselines.ipynb  04_building_baselines_and_fine_tuning.ipynb  04_use_fine_tuned_model.ipynb
src/mistral_fine_tuning/: __init__.py  joke.py  keywords.py  levels.py  refine.py  reformat.py  segment.py  utils.py
