[project]
name = "mistral-fine-tuning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alonso Astroza Tagle", email = "alonsoastroza@gmail.com" }
]
dependencies = [
    "mistralai>=0.4.0",
    "instructor>=1.3.3",
    "pandas>=2.2.2",
    "jupyter>=1.0.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.9.0",
    "google-generativeai>=0.7.0",
    "anthropic>=0.29.2",
    "chardet>=5.2.0",
    "weave>=0.50.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_fine_tuning"]
